force-app/main/default/objects/Activity/fields/Decisionnaire__c.field-meta.xml
<CustomField>
    <fullName>Decisionnaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Décisionnaire ?</label>
    <type>Checkbox</type>
</CustomField>