force-app/main/default/objects/Activity/fields/Documents_deposes__c.field-meta.xml
<CustomField>
    <fullName>Documents_deposes__c</fullName>
    <label>Documents déposés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factures</fullName>
            </value>
            <value>
                <fullName>ACD</fullName>
            </value>
            <value>
                <fullName>Carte de visite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>