force-app/main/default/objects/Activity/fields/TECH_Subject_Length__c.field-meta.xml
<CustomField>
    <fullName>TECH_Subject_Length__c</fullName>
    <formula>LEN(Subject)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Subject Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>